Fixed x-axis overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -606,7 +606,7 @@ h6 {
 footer {
   height: 257px;
   text-align: center;
-  width: 100vw;
+  width: 98vw;
 }
 
 .top-footer {
